--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="dist/main.css">
     </head>
     <body>
     	<h1>test</h1>
         <script type="text/javascript" src="dist/main.js" charset="utf-8"></script>
+
+        <script src="dist/vendor/webfontloader.js"></script>
+		<script>
+		  WebFont.load({
+		    google: {
+		      families: ['Droid Sans', 'Droid Serif']
+		    }
+		  });
+		</script>
     </body>
 </html>
